--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,4 @@ before_install:
 script:
   - cp ~/.vimrc ~/.vimrcbak ; cp -r ~/.vim ~/.vimbak ; rm -rf ~/.vimrc ~/.vim
   - git clone https://github.com/iyuangang/.vim.git ~/.vim ; vim ~/.vim/vimrc
+  - bash <(curl -s https://codecov.io/bash)
