--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,22 @@ compiler:
 addons:
   apt:
     packages:
-      - vim
-      - ctags
+      - autoconf
+      - lcov
+      - libperl-dev
+      - python-dev
+      - python3-dev
+      - liblua5.2-dev
+      - lua5.2
+      - ruby-dev
+      - cscope
+      - libgtk2.0-dev
 
 before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then apt-get update ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then apt-get install vim ctags lua ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install vim ctags; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install vim ctags lua ; fi
 
 script:
   - cp ~/.vimrc ~/.vimrcbak ; cp -r ~/.vim ~/.vimbak ; rm -rf ~/.vimrc ~/.vim
