--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ addons:
       - libgtk2.0-dev
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then apt-get update ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then apt-get install vim ctags lua ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install vim ctags lua ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install vim ctags lua ; fi
 
